--- a/pom.xml
+++ b/pom.xml
@@ -137,7 +137,35 @@
 <version>1.2</version>
 </dependency>
 
-   </dependencies>
+   <dependency>
+   	<groupId>com.github.pagehelper</groupId>
+   	<artifactId>pagehelper</artifactId>
+   	<version>3.6.3</version>
+   </dependency>
+   <dependency>
+   	<groupId>org.springframework.data</groupId>
+   	<artifactId>spring-data-commons</artifactId>
+   	<version>1.9.3.RELEASE</version>
+   </dependency>
+   <dependency>
+   	<groupId>org.springframework.data</groupId>
+   	<artifactId>spring-data-jpa</artifactId>
+   	<version>1.7.3.RELEASE</version>
+   </dependency>
+   
+   <dependency>  
+     <groupId>com.alibaba</groupId>  
+     <artifactId>fastjson</artifactId>  
+     <version>1.1.34</version>  
+  </dependency> 
+  
+   <dependency>  
+     <groupId>net.sf.json-lib</groupId>  
+     <artifactId>json-lib</artifactId>  
+     <version>2.3</version>  
+     <classifier>jdk15</classifier>  
+   </dependency>  
+  </dependencies>
   
   <build>
     <finalName>mavenbatis</finalName>
@@ -174,6 +202,7 @@
                 <artifactId>tomcat7-maven-plugin</artifactId>
                 <version>2.0-beta-1</version>
             </plugin>
+            
         </plugins>
   </build>
 </project>
