--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,39 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://java.sun.com/xml/ns/javaee" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd" version="3.0">
   
-  <!-- 编码过滤器 -->
- 	<filter>
- 		<filter-name>login</filter-name>
- 		<filter-class>com.lauguobin.www.util.UserFilter</filter-class>
- 		<init-param>
- 			<param-name>encoding</param-name>
- 			<param-value>utf-8</param-value>
- 		</init-param>
- 	</filter>
- 	<filter-mapping>
- 		<filter-name>login</filter-name>
- 		<url-pattern>/*</url-pattern>
- 	</filter-mapping>
- 
-<!-- 请求url日志记录过滤器 -->
- 	<filter>
- 		<filter-name>manager</filter-name>
- 		<filter-class>com.lauguobin.www.util.ManagerFilter</filter-class>
- 	</filter>
- 	<filter-mapping>
- 		<filter-name>manager</filter-name>
- 		<url-pattern>/manager/*</url-pattern>
- 	</filter-mapping>
-  
-   	<filter>
- 		<filter-name>student</filter-name>
- 		<filter-class>com.lauguobin.www.util.StudentFilter</filter-class>
- 	</filter>
- 	<filter-mapping>
- 		<filter-name>student</filter-name>
- 		<url-pattern>/student/*</url-pattern>
- 	</filter-mapping>
-  
+
     <!-- Spring应用上下文， 理解层次化的ApplicationContext -->
   <context-param>
  		<param-name>contextConfigLocation</param-name>
@@ -51,8 +19,7 @@
   <servlet>
 		<servlet-name>mvc-dispatcher</servlet-name>
 		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
-		<!-- DispatcherServlet对应的上下文配置， 默认为/WEB-INF/$servlet-name$-servlet.xml
-		 -->
+		<!-- DispatcherServlet对应的上下文配置， 默认为/WEB-INF/$servlet-name$-servlet.xml -->
 		<init-param>
           <param-name>contextConfigLocation</param-name>
           <param-value>classpath*:mvc-dispatcher-servlet.xml</param-value>
