--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,6 @@
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <version>4.10</version>
-<!--       <scope>test</scope> -->
      </dependency>
     
     <dependency>
@@ -147,7 +146,7 @@
   </dependencies>
   
   <build>
-    <finalName>mavenbatis</finalName>
+    <finalName>library</finalName>
     
        <plugins>
             <plugin>
@@ -175,13 +174,12 @@
                     </excludes>
                 </configuration>
             </plugin>
-            
-            <plugin>
-                <groupId>org.apache.tomcat.maven</groupId>
-                <artifactId>tomcat7-maven-plugin</artifactId>
-                <version>2.0-beta-1</version>
-            </plugin>
-            
-        </plugins>
+
+           <plugin>
+               <groupId>org.apache.tomcat.maven</groupId>
+               <artifactId>tomcat7-maven-plugin</artifactId>
+               <version>2.2</version>
+           </plugin>
+       </plugins>
   </build>
 </project>
