--- a/pom.xml
+++ b/pom.xml
@@ -178,8 +178,13 @@
            <plugin>
                <groupId>org.apache.tomcat.maven</groupId>
                <artifactId>tomcat7-maven-plugin</artifactId>
-               <version>2.2</version>
+               <version>2.1</version>
+               <configuration>
+                   <uriEncoding>UTF-8</uriEncoding>
+                   <server>tomcat7</server>
+               </configuration>
            </plugin>
+
        </plugins>
   </build>
 </project>
